# comp_conv_cartesian_healpix

./: README.md  pyproject.toml
scripts/: test_atmocorr.py  test_fftconv_cartesian.py
src/cartvsheal/: __init__.py  atmocorr.py  cartesian_fft_convolve.py  kernels.py  utils.py
