[project]
authors = [{ name = "walcark", email = "kevin.walcarius@cnes.fr" }]
dependencies = []
name = "comp_convol_cartesian-healpix"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.hatch.build.targets.wheel]
packages = ["src/cartvsheal"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
comp_convol_cartesian_healpix = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
numpy = ">=2.4.2,<3"
pandas = ">=3.0.0,<4"
colorlog = "*"
structlog = ">=25.5.0,<26"
pip = ">=26.0.1,<27"
matplotlib = ">=3.10.8,<4"

[tool.pixi.feature.gpu]
system-requirements = { cuda = "12.6" }
dependencies = { cuda-version = "12.6.*", pytorch-gpu = "*", cuda-cudart-dev = "12.6.*", cuda-nvcc = "12.6.*" }

[tool.pixi.feature.cpu]
dependencies = { pytorch-cpu = "*" }

[tool.pixi.environments]
cpu = ["cpu"]
gpu = ["gpu"]
